# vibeboard-runtime-gpl

./: .gitignore  NOTICE.md  README.md  package.json
apps/2048/: app.info  main.lua
apps/audio_loopback/: app.info  main.lua
apps/btc/: app.info  config.json  main.lua
apps/camera/: app.info  main.lua
apps/clock/: app.info
apps/codex_buddy/: app.info  config.json  main.lua
apps/conway_life/: app.info  main.lua
apps/demo_auto_snake/: app.info  main.lua
apps/demo_digital_clock/: app.info  main.lua
apps/demo_focus_timer/: app.info  main.lua
apps/demo_lucky_card/: app.info  main.lua
apps/demo_neon_dash/: app.info  main.lua
apps/demo_night_light/: app.info  main.lua
apps/demo_pixel_pet/: app.info  main.lua
apps/demo_space_dash/: app.info  main.lua
apps/demo_terminal_status/: app.info  main.lua
apps/fluid_pendant/: app.info  main.lua
apps/holocubic_2048/: app.info  main.lua
apps/holocubic_analog_clock/: app.info  main.lua
apps/holocubic_btc/: app.info  main.lua
apps/holocubic_codex_buddy/: app.info  main.lua
apps/holocubic_conway_life/: app.info  main.lua
apps/holocubic_devtools/: app.info  main.lua
apps/holocubic_fluid_pendant/: app.info  main.lua
apps/holocubic_hwmon/: app.info  main.lua
apps/holocubic_lv_benchmark/: app.info  main.lua
apps/holocubic_matrix_rain/: app.info  main.lua
apps/holocubic_mini_claw/: app.info  main.lua
apps/holocubic_nixie_clock/: app.info  main.lua
apps/holocubic_photos/: app.info  main.lua
apps/holocubic_plane/: app.info  main.lua
apps/holocubic_settings/: app.info  main.lua
apps/holocubic_spectrum/: app.info  main.lua
apps/holocubic_videos/: app.info  main.lua
apps/hwmon/: app.info  config.json  main.lua
apps/lib/: voice_audio.lua
apps/lv-benchmark/: app.info  main.lua
apps/matrix_rain/: app.info
apps/mini_claw/: app.info  main.lua
apps/nesgame/: app.info  main.lua
apps/nesgame/native/: nes.vbn
apps/nixie_clock/: app.info  main.lua
apps/photos/: app.info  main.lua
apps/plane/: app.info  main.lua
apps/settings/: app.info  main.lua
apps/smoke/: app.info  main.lua
apps/smoke_app_manager/: app.info  main.lua
apps/smoke_assets/: app.info  main.lua
apps/smoke_camera/: app.info  main.lua
apps/smoke_canvas/: app.info  main.lua
apps/smoke_controls/: app.info  main.lua
apps/smoke_fail/: app.info  main.lua
apps/smoke_file/: app.info  config.json  main.lua
apps/smoke_gamepad/: app.info  main.lua
apps/smoke_i2s/: app.info  main.lua
apps/smoke_imu/: app.info  main.lua
apps/smoke_input/: app.info  main.lua
apps/smoke_key/: app.info  main.lua
apps/smoke_lvgl_style/: app.info  main.lua
apps/smoke_lvgl_widgets/: app.info  main.lua
apps/smoke_nes/: app.info  main.lua
apps/smoke_network/: app.info  main.lua  wifi.example.json
apps/smoke_timer/: app.info  main.lua
apps/smoke_touch/: app.info  main.lua
apps/smoke_ui/: app.info  main.lua
apps/smoke_visual/: app.info  main.lua
apps/spectrum/: app.info  main.lua
apps/videos/: app.info  main.lua
apps/voice_ai/: README.md  app.info  config.example.json  main.lua
apps/voice_ai/font/: build_msyh_cn_13.ps1  (+2 more)
apps/weather/: app.info  main.lua
desktop-bridge/: apple-speech-transcribe.swift  local-reply.mjs  openai-voice-commands.mjs  server.mjs  test.mjs
docs/: ai-generation-contract.md  app-package-format.md  architecture.md  deployment-flow.md  development-plan.md  device-bringup.md  esp32-flash-partitions.md  holocubic-app-migration.json  holocubic-app-migration.md  holocubic-full-port-plan.md  lckfb-szpi-s3-source-map.md  native-module-abi-notes.md  new-app-development-guide.md  next-session-plan.md  phase-5a-closure.md  post-v0.1-backlog.md  runtime-boundary.md  runtime-capabilities.md  runtime-troubleshooting.md  runtime-vs-traditional-firmware.md  upstream-map.md  voice-ai-flow.md
docs/releases/: v0.1-release-candidate.md  v0.1-runtime-milestone.md
firmware/vibeboard_runtime/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/vibeboard_runtime/main/: CMakeLists.txt  app_registry.c  app_registry.h  app_runner.c  app_runner.h  board_lckfb_szpi_s3.c  board_lckfb_szpi_s3.h  idf_component.yml  install_service.c  install_service.h  launcher_ui.c  launcher_ui.h  linker.lf  lua_app.c  lua_app.h  lua_camera.c  lua_camera.h  lua_file.c  lua_file.h  lua_fluid.c  lua_fluid.h  lua_gamepad.c  lua_gamepad.h  lua_http.c  lua_http.h  lua_i2s.c  lua_i2s.h  lua_imu.c  lua_imu.h  lua_key.c  lua_key.h  lua_lvgl.c  lua_lvgl.h  lua_lvgl_canvas.c  lua_lvgl_fs.c  lua_lvgl_internal.h  lua_lvgl_widgets.c  lua_native_module.c  lua_native_module.h  lua_sjson.c  (+35 more)
modules/nes/: LICENSE  config.h  debug.h  nes_types.h
modules/nes/main/: CMakeLists.txt  nes_module.c
scripts/: test-ai-contract.mjs  test-holocubic-migration.mjs  test-upstream-map.mjs
tools/: import-upstream.sh
tools/app-manager-smoke/: index.mjs  test.mjs
tools/app-packager/: cli.mjs  index.mjs  package-demos.mjs  test.mjs
tools/app-plan-writer/: cli.mjs  index.mjs  test.mjs
tools/app-uploader/: cli.mjs  delete.mjs  index.mjs  interrupted-smoke.mjs  launch.mjs  runtime-config-smoke.mjs  runtime-config.mjs  test.mjs
tools/app-validator/: cli.mjs  index.mjs  test.mjs  validate-demo-apps.mjs
tools/device-check/: index.mjs  test.mjs
tools/device-web-ui/: server.mjs  smoke.mjs  test.mjs
tools/firmware-static-check/: test.mjs
tools/gamepad-smoke/: index.mjs  test.mjs
tools/i2s-smoke/: index.mjs  test.mjs
tools/input-smoke/: index.mjs  test.mjs
tools/lifecycle-smoke/: index.mjs  test.mjs
tools/nes-rom-smoke/: index.mjs  test.mjs
tools/nes-smoke/: index.mjs  test.mjs
tools/nesgame-smoke/: index.mjs  test.mjs
tools/runtime-config/: test.mjs  wifi.mjs
tools/voice-ai-smoke/: index.mjs  test.mjs
tools/weather-bridge/: server.mjs  test.mjs
upstream/holocubic-apps/: .gitignore  README.md  README_LUA.md  README_LVGL.md
upstream/holocubic-nes-esp32/: .gitignore  CMakeLists.txt  README.md  nes_config.h  sdkconfig.defaults
web-console/: README.md
(+168 files in other folders)
