idf_component_register(
    SRCS
        "app_runner.c"
        "app_registry.c"
        "board_lckfb_szpi_s3.c"
        "install_service.c"
        "launcher_ui.c"
        "runtime_wifi.c"
        "lua_file.c"
        "lua_http.c"
        "lua_key.c"
        "lua_lvgl.c"
        "lua_lvgl_canvas.c"
        "lua_lvgl_fs.c"
        "lua_lvgl_widgets.c"
        "lua_native_module.c"
        "lua_sjson.c"
        "lua_time.c"
        "lua_tmr.c"
        "lua_wifi.c"
        "main.c"
        "module_host_api.c"
        "native_module_loader.c"
        "native_module_static_adapter.c"
        "nes_host_v1_shim.c"
        "nes_native_adapter.c"
    INCLUDE_DIRS "." "../../../modules/nes/include"
    REQUIRES
        esp_driver_i2c
        esp_driver_ledc
        esp_driver_sdmmc
        esp_driver_spi
        esp_event
        esp_http_client
        esp_http_server
        esp_lcd
        esp_netif
        espressif__esp_lvgl_port
        esp_psram
        esp_wifi
        fatfs
        georgik__lua
        json
        lvgl__lvgl
        mbedtls
        nvs_flash
        sdmmc
        vfs
)
