idf_component_register(
    SRCS
        "app_runner.c"
        "app_registry.c"
        "board_lckfb_szpi_s3.c"
        "install_service.c"
        "launcher_ui.c"
        "runtime_wifi.c"
        "lua_app.c"
        "lua_file.c"
        "lua_gamepad.c"
        "lua_http.c"
        "lua_i2s.c"
        "lua_key.c"
        "lua_lvgl.c"
        "lua_lvgl_canvas.c"
        "lua_lvgl_fs.c"
        "lua_lvgl_widgets.c"
        "lua_native_module.c"
        "lua_sjson.c"
        "lua_time.c"
        "lua_tmr.c"
        "lua_touch.c"
        "lua_wifi.c"
        "main.c"
        "module_host_api.c"
        "native_module_loader.c"
        "native_module_static_adapter.c"
        "nes_host_v1_shim.c"
        "nes_native_adapter.c"
        "../../../modules/nes/core/apu2A03.cpp"
        "../../../modules/nes/core/bus.cpp"
        "../../../modules/nes/core/cartridge.cpp"
        "../../../modules/nes/core/cpu6502.cpp"
        "../../../modules/nes/core/mapper.cpp"
        "../../../modules/nes/core/power_on_ram.cpp"
        "../../../modules/nes/core/ppu2C02.cpp"
        "../../../modules/nes/core/mappers/mapper000.cpp"
        "../../../modules/nes/core/mappers/mapper001.cpp"
        "../../../modules/nes/core/mappers/mapper002.cpp"
        "../../../modules/nes/core/mappers/mapper003.cpp"
        "../../../modules/nes/core/mappers/mapper004.cpp"
        "../../../modules/nes/core/mappers/mapper007.cpp"
        "../../../modules/nes/core/mappers/mapper015.cpp"
        "../../../modules/nes/core/mappers/mapper069.cpp"
        "../../../modules/nes/core/mappers/mapper226.cpp"
        "../../../modules/nes/audio/nes_audio_out.cpp"
        "../../../modules/nes/port/nes_port.cpp"
        "../../../modules/nes/runtime/nes_core_bridge.cpp"
        "../../../modules/nes/video/nes_video_out.cpp"
    INCLUDE_DIRS "." "../../../modules/nes" "../../../modules/nes/include" "../../../modules/nes/port"
    REQUIRES
        esp_driver_i2c
        esp_driver_ledc
        esp_driver_sdmmc
        esp_driver_spi
        esp_event
        esp_http_client
        esp_http_server
        esp_driver_i2s
        esp_lcd
        esp_netif
        espressif__esp_lvgl_port
        esp_psram
        esp_wifi
        fatfs
        georgik__lua
        json
        lvgl__lvgl
        mbedtls
        nvs_flash
        sdmmc
        vfs
)
